PublishPostActivity(Photo on Camera doesn't work)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,13 +25,22 @@
         </activity>
         <activity android:name=".ui.PostDetailActivity" />
         <activity android:name=".ui.RankingActivity" />
-        <activity android:name=".ui.PublishPostActivity" >
+        <activity android:name=".ui.PublishPostActivity">
+
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
-
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
         </activity>
+        <provider
+            android:name = "androidx.core.content.FileProvider"
+            android:authorities = "com.forif.honsullife"
+            android:exported = "false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_path"></meta-data>
+        </provider>
         <activity android:name=".ui.MainActivity">
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
