--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-auth:19.3.2'
+    implementation 'com.airbnb.android:lottie:3.4.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     //Material Design
     implementation 'com.google.android.material:material:1.1.0'
